added meta element viewport to make the website responsive

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
         <meta charset="UTF-8">
         <title>Municipality</title>
         <link href="./style.css" type="text/css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
     </head>
     <body>  
         <nav>
-            <h1>Maluti A Phofung</h1>
+            JOJO Water Alert
             <ul>
                 <a href="list.html"></a>
             </ul>
         </nav>
         <div class="container">
             <div class="text">
-                Water Delivery Alert
+                Fill in Details
             </div>
             <form action="#" id="deliveryForm" method="post">
                   
@@ -43,8 +44,8 @@
             <p><strong>Location:</strong><span id="preview-location">---</span></p>
             <p><strong>Time:<span id="preview-time">---</span></strong></p>
             <p><strong>Date:<span id="preview-date">---</span></strong></p>
-         </div> 
-         </div>-->
+         </div> -->
+         </div>
     <script src="script.js"></script>
     </body>
 </html>
